fix: update padding and alignment in CustomCard styles for improved layout; adjust Sidebar gap for better spacing

--- a/src/app/components/common/Customcard.module.css
+++ b/src/app/components/common/Customcard.module.css
@@ -1,5 +1,5 @@
 .custom-card {
-  padding: 18px 20px 18px 22px;
+  padding: 15px 20px;
   background: #fff;
   border: 2px solid #E3E8EF;
   border-radius: 12px;
@@ -16,16 +16,16 @@
 .custom-card-header {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 4px;
 }
 .custom-card-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
-  color: #101828;
+  font-weight: 500;
+  font-size: 22px;
+  font-style: medium;
+  line-height: 26px;
+  color:#000000;
 }
 .custom-card-icon {
   border: 1px solid #88E3C8;
@@ -42,17 +42,17 @@
   display: flex;
   align-items: baseline;
   gap: 8px;
-  margin-bottom: 4px;
 }
 .custom-card-value {
-  font-weight: 700;
-  font-size: 40px;
-  color: #101828;
+  font-weight: 600;
+  font-size: 46px;
+  line-height: 46px;
+  color: #000000;
 }
 .custom-card-subtitle {
   font-weight: 500;
-  font-size: 18px;
-  color: #667085;
+  font-size: 22px;
+  color: #444444;
 }
 .custom-card-trend-row {
   display: flex;
@@ -61,11 +61,13 @@
 }
 .custom-card-trend-up {
   color: #2E896E;
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 38px;
 }
 .custom-card-trend-desc {
-  color: #667085;
-  font-weight: 400;
-  font-size: 16px;
+  color: #9BA6B7;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
 }
