--- a/src/app/components/layout/Sidebar/Sidebar.module.css
+++ b/src/app/components/layout/Sidebar/Sidebar.module.css
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 22px;
+  gap: 30px;
 }
 
 .menuItem {
